# mkm_companion

./: .gitignore  Readme.md  master.ipynb  pyproject.toml
mkm_companion/: __init__.py  setup.py
mkm_companion/api/: __init__.py  account_interaction.py  helper.py  market_interaction.py
